Fix z-index for footer and meta block

--- a/web/static/application.sass
+++ b/web/static/application.sass
@@ -65,7 +65,7 @@ body
     flex-order: 2
     font-size: 5vw
   .meta-item
-    z-index: 5
+    z-index: 1
     color: $tile-control-foreground-color
     padding: 5px
     max-width: 200px
@@ -137,6 +137,7 @@ body
   bottom: 5px
   left: 0px
   width: auto
+  z-index: 5
   .menu
     li
       margin: 0px 0px
